# croco_customer_validation_app

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
customer_mobile_validation/: customer.py  hooks.py  install.py  modules.txt
customer_mobile_validation/public/js/: customer.js  customer_list.js  customer_mobile_flag_listener.js  customer_quick_entry_patch.js
